third_party/move/move-compiler-v2/tests/checking/typing/pack_reference_2.exp

Diagnostics:
error: invalid type instantiation `&mut u64`: only structs, vectors, and primitive types allowed
  ┌─ tests/checking/typing/pack_reference_2.move:5:9
  │
5 │         Box { f: r_mut };
  │         ^^^^^^^^^^^^^^^^

error: expected `u64` but found `bool` (from assignment or declaration context)
  ┌─ tests/checking/typing/pack_reference_2.move:7:9
  │
7 │         x = false
  │         ^
